--- a/myClashProfile.ini
+++ b/myClashProfile.ini
@@ -6,17 +6,17 @@
 surge_ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 surge_ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 surge_ruleset=🎥 亚洲媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/AsianTV.list
-surge_ruleset=🌏 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-;surge_ruleset=🌏 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-surge_ruleset=🌏 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-surge_ruleset=🌏 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-surge_ruleset=🌏 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-surge_ruleset=🌏 全球直连,[]GEOIP,CN
+surge_ruleset=🌏 直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+;surge_ruleset=🌏 直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+surge_ruleset=🌏 直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+surge_ruleset=🌏 直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+surge_ruleset=🌏 直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+surge_ruleset=🌏 直连国内,[]GEOIP,CN
 surge_ruleset=🎥 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/GlobalTV.list
 surge_ruleset=🎥 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list
 surge_ruleset=🎥 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list
 surge_ruleset=🎥 国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
-surge_ruleset=🔰 使用节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+surge_ruleset=🔰 GFW节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 surge_ruleset=🍎 苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
 surge_ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -25,48 +25,44 @@ surge_ruleset=🐟 漏网之鱼,[]FINAL
 
 ;设置分组标志位
 
-;使用节点
-custom_proxy_group=🔰 使用节点`select`[]♻️ 自动选择`[]🚀 手动切换`[]♻️ 负载均衡`[]♻️ 故障切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT`[]REJECT
-;使用节点
-
-;手动选择
+;手动选择(调用型)
 custom_proxy_group=🚀 手动切换`select`.*
-;手动选择
+;手动选择(调用型)
 
-;自动选择
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
-;自动选择
+;GFW节点(调用型)
+custom_proxy_group=🔰 GFW节点`select`[]♻️ 自动选择`[]🚀 手动切换`[]♻️ 负载均衡`[]♻️ 故障切换`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT`[]REJECT
+;GFW节点(调用型)
+
+;其他 - 一般是国外连接
+custom_proxy_group=🐟 漏网之鱼`select`[]🔰 GFW节点`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]♻️ 负载均衡`[]♻️ 故障切换`[]DIRECT`[]REJECT
+;其他 - 一般是国外连接
 
 ;国外媒体
-custom_proxy_group=🎥 国外媒体`select`[]🚀 手动切换`[]🔰 使用节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT`[]REJECT
+custom_proxy_group=🎥 国外媒体`select`[]🚀 手动切换`[]🔰 GFW节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT`[]REJECT
 ;国外媒体
 
-;国内直连
-custom_proxy_group=🌏 全球直连`select`[]DIRECT`[]🚀 手动切换`[]REJECT
-;国内直连
+;亚洲媒体
+custom_proxy_group=🎥 亚洲媒体`select`[]DIRECT`[]🚀 手动切换`[]🔰 GFW节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]REJECT
+;亚洲媒体
 
-;其他
-custom_proxy_group=🐟 漏网之鱼`select`[]🔰 使用节点`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🚀 手动切换`[]♻️ 负载均衡`[]♻️ 故障切换`[]DIRECT`[]REJECT
-;其他
+;国内直连
+custom_proxy_group=🌏 直连国内`select`[]DIRECT`[]🚀 手动切换`[]🔰 GFW节点`[]REJECT
+;国内直连
 
 ;电报服务
-custom_proxy_group=📲 电报消息`select`[]♻️ 自动选择`[]🔰 使用节点`[]🚀 手动切换`[]♻️ 负载均衡`[]♻️ 故障切换`[]DIRECT`[]REJECT
+custom_proxy_group=📲 电报消息`select`[]♻️ 自动选择`[]🔰 GFW节点`[]🚀 手动切换`[]♻️ 负载均衡`[]♻️ 故障切换`[]DIRECT`[]REJECT
 ;电报服务
 
 ;苹果服务
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 手动切换`[]🔰 使用节点`[]REJECT
+custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 手动切换`[]🔰 GFW节点`[]REJECT
 ;苹果服务
 
 ;微软服务
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 手动切换`[]🔰 使用节点`[]REJECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]DIRECT`[]🚀 手动切换`[]🔰 GFW节点`[]REJECT
 ;微软服务
-
-;亚洲媒体
-custom_proxy_group=🎥 亚洲媒体`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🚀 手动切换`[]🔰 使用节点`[]DIRECT`[]REJECT
-;亚洲媒体
 
 ;运营商劫持
-;custom_proxy_group=🛑 禁止垃圾`select`[]REJECT`[]DIRECT`[]🚀 手动切换`[]🔰 使用节点
+;custom_proxy_group=🛑 禁止垃圾`select`[]REJECT`[]DIRECT`[]🚀 手动切换`[]🔰 GFW节点
 ;运营商劫持
 
 ;广告拦截
@@ -74,20 +70,24 @@ custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 ;广告拦截
 
-;负载均衡
+;自动选择(调用型)
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
+;自动选择(调用型)
+
+;负载均衡(调用型)
 custom_proxy_group=♻️ 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300
-;负载均衡
+;负载均衡(调用型)
 
-;故障切换
+;故障切换(调用型)
 custom_proxy_group=♻️ 故障切换`fallback`.*`http://www.gstatic.com/generate_204`300
-;故障切换
+;故障切换(调用型)
 
-;地区分组
+;地区分组(调用型)
 custom_proxy_group=🇭🇰 香港节点`url-test`🇭🇰 (香港|港|HK)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`url-test`(台湾|台|新北|彰化|TW)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US)`http://www.gstatic.com/generate_204`300
-;地区分组
+;地区分组(调用型)
 
 ;设置分组标志位
