--- a/myClashProfile.ini
+++ b/myClashProfile.ini
@@ -83,7 +83,7 @@ custom_proxy_group=♻️ 故障切换`fallback`.*`http://www.gstatic.com/genera
 ;故障切换(调用型)
 
 ;地区分组(调用型)
-custom_proxy_group=🇭🇰 香港节点`url-test`🇭🇰 (香港|港|HK)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=🇭🇰 香港节点`url-test`🇭🇰 (*(香港|港|HK))`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇨🇳 台湾节点`url-test`(台湾|台|新北|彰化|TW)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP)`http://www.gstatic.com/generate_204`300
