--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -30,7 +30,7 @@ custom_proxy_group=手动切换`select`.*
 ;手动选择(调用型)
 
 ;GFW节点(调用型)
-custom_proxy_group=GFW节点`select`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点
+custom_proxy_group=GFW节点`select`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*
 ;GFW节点(调用型)
 
 ;其他 - 一般是国外连接
