--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -34,27 +34,27 @@ custom_proxy_group=GFW节点`select`[]自动选择`[]手动切换`[]负载均衡
 ;GFW节点(调用型)
 
 ;其他 - 一般是国外连接
-custom_proxy_group=其他连接`select`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点
+custom_proxy_group=其他连接`select`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*`[]DIRECT`[]REJECT
 ;其他 - 一般是国外连接
 
 ;国外媒体
-custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`[]DIRECT`[]REJECT`.*
+custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*`[]DIRECT`[]REJECT
 ;国外媒体
 
 ;亚洲媒体
-custom_proxy_group=亚洲媒体`select`[]DIRECT`[]手动切换`[]GFW节点`[]香港节点`[]台湾节点`[]REJECT`.*
+custom_proxy_group=亚洲媒体`select`[]DIRECT`[]手动切换`[]GFW节点`[]香港节点`[]台湾节点`.*`[]REJECT
 ;亚洲媒体
 
 ;国内直连
-custom_proxy_group=直连国内`select`[]DIRECT`[]自动选择`[]手动切换`[]GFW节点`[]REJECT`.*
+custom_proxy_group=直连国内`select`[]DIRECT`[]自动选择`[]手动切换`[]GFW节点`.*`[]REJECT
 ;国内直连
 
 ;电报服务
-custom_proxy_group=电报消息`select`[]自动选择`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`.*
+custom_proxy_group=电报消息`select`[]自动选择`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`[]DIRECT`.*`[]REJECT
 ;电报服务
 
 ;微软服务
-custom_proxy_group=微软云盘`select`[]DIRECT`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]REJECT`.*
+custom_proxy_group=微软云盘`select`[]DIRECT`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
 ;微软服务
 
 ;广告拦截
