--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -38,7 +38,7 @@ custom_proxy_group=其他连接`select`[]GFW节点`[]自动选择`[]手动切换
 ;其他 - 一般是国外连接
 
 ;国外媒体
-custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*`[]DIRECT`[]REJECT
+custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*`[]DIRECT`[]REJECT
 ;国外媒体
 
 ;亚洲媒体
