--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -30,19 +30,19 @@ custom_proxy_group=手动切换`select`.*
 ;手动选择(调用型)
 
 ;GFW节点(调用型)
-custom_proxy_group=GFW节点`select`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*
+custom_proxy_group=GFW节点`select`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`.*
 ;GFW节点(调用型)
 
 ;其他 - 一般是国外连接
-custom_proxy_group=其他连接`select`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*`[]DIRECT`[]REJECT
+custom_proxy_group=其他连接`select`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
 ;其他 - 一般是国外连接
 
 ;国外媒体
-custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`[]香港节点`[]台湾节点`[]狮城节点`[]日本节点`[]美国节点`.*`[]DIRECT`[]REJECT
+custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
 ;国外媒体
 
 ;亚洲媒体
-custom_proxy_group=亚洲媒体`select`[]DIRECT`[]手动切换`[]GFW节点`[]香港节点`[]台湾节点`.*`[]REJECT
+custom_proxy_group=亚洲媒体`select`[]DIRECT`[]手动切换`[]GFW节点`.*`[]REJECT
 ;亚洲媒体
 
 ;国内直连
@@ -75,11 +75,11 @@ custom_proxy_group=故障切换`fallback`.*`http://www.gstatic.com/generate_204`
 ;故障切换(调用型)
 
 ;地区分组(调用型)
-custom_proxy_group=香港节点`url-test`(香港|港|HK)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=台湾节点`url-test`(台湾|台|新北|彰化|TW)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=狮城节点`url-test`(新加坡|坡|狮城|SG)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US)`http://www.gstatic.com/generate_204`300
+; custom_proxy_group=香港节点`url-test`(香港|港|HK)`http://www.gstatic.com/generate_204`300
+; custom_proxy_group=台湾节点`url-test`(台湾|台|新北|彰化|TW)`http://www.gstatic.com/generate_204`300
+; custom_proxy_group=狮城节点`url-test`(新加坡|坡|狮城|SG)`http://www.gstatic.com/generate_204`300
+; custom_proxy_group=日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP)`http://www.gstatic.com/generate_204`300
+; custom_proxy_group=美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US)`http://www.gstatic.com/generate_204`300
 ;地区分组(调用型)
 
 ;设置分组标志位
