--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -3,24 +3,29 @@
 ;acl4SSR规则
 
 ;设置规则标志位
+surge_ruleset=直连国内,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Special.list
+;特殊放前面
 surge_ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-surge_ruleset=应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-surge_ruleset=应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+surge_ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
+surge_ruleset=广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+surge_ruleset=广告拦截,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Hijacking.list
+;拦截广告、应用净化、运营商劫持
 surge_ruleset=电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-surge_ruleset=微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-surge_ruleset=亚洲媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/AsianTV.list
-surge_ruleset=国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/GlobalTV.list
-surge_ruleset=国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/YouTube.list
-surge_ruleset=国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Netflix.list
-surge_ruleset=国外媒体,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Media/Bahamut.list
+;surge_ruleset=微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+surge_ruleset=微软服务,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Microsoft.list
+surge_ruleset=Steam,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Steam.list
+surge_ruleset=国外媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
+;特殊域名对待
 surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-;surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 surge_ruleset=直连国内,[]GEOIP,CN
+;直连不代理
 surge_ruleset=GFW节点,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 surge_ruleset=其他连接,[]FINAL
+;兜底的 GFW 和 FINAL，前者，包含所有被墙的，后者包含所有国外的
 ;设置规则标志位
 
 ;设置分组标志位
@@ -41,10 +46,6 @@ custom_proxy_group=其他连接`select`[]GFW节点`[]自动选择`[]手动切换
 custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
 ;国外媒体
 
-;亚洲媒体
-custom_proxy_group=亚洲媒体`select`[]DIRECT`[]手动切换`[]GFW节点`.*`[]REJECT
-;亚洲媒体
-
 ;国内直连
 custom_proxy_group=直连国内`select`[]DIRECT`[]自动选择`[]手动切换`[]GFW节点`.*`[]REJECT
 ;国内直连
@@ -54,17 +55,20 @@ custom_proxy_group=电报消息`select`[]自动选择`[]手动切换`[]GFW节点
 ;电报服务
 
 ;微软服务
-custom_proxy_group=微软云盘`select`[]DIRECT`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
+custom_proxy_group=微软服务`select`[]DIRECT`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
+;微软服务
+
+;微软服务
+custom_proxy_group=Steam`select`[]DIRECT`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
 ;微软服务
 
 ;广告拦截
 custom_proxy_group=广告拦截`select`[]REJECT`[]自动选择`[]手动切换`[]DIRECT
-custom_proxy_group=应用净化`select`[]REJECT`[]自动选择`[]手动切换`[]DIRECT
 ;广告拦截
 
-;自动选择(调用型)
-custom_proxy_group=自动选择`url-test`.*`http://www.gstatic.com/generate_204`300
-;自动选择(调用型)
+;自动测试(调用型)
+custom_proxy_group=自动测试`url-test`.*`http://www.gstatic.com/generate_204`300
+;自动测试(调用型)
 
 ;负载均衡(调用型)
 custom_proxy_group=负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300
