--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -35,11 +35,11 @@ custom_proxy_group=手动切换`select`.*
 ;手动选择(调用型)
 
 ;GFW节点(调用型)
-custom_proxy_group=GFW节点`select`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`.*
+custom_proxy_group=GFW节点`select`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`.*
 ;GFW节点(调用型)
 
 ;其他 - 一般是国外连接
-custom_proxy_group=其他连接`select`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
+custom_proxy_group=其他连接`select`[]GFW节点`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
 ;其他 - 一般是国外连接
 
 ;国外媒体
@@ -47,23 +47,23 @@ custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]负载均衡
 ;国外媒体
 
 ;国内直连
-custom_proxy_group=直连国内`select`[]DIRECT`[]自动选择`[]手动切换`[]GFW节点`.*`[]REJECT
+custom_proxy_group=直连国内`select`[]DIRECT`[]自动测试`[]手动切换`[]GFW节点`.*`[]REJECT
 ;国内直连
 
 ;电报服务
-custom_proxy_group=电报消息`select`[]自动选择`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`[]DIRECT`.*`[]REJECT
+custom_proxy_group=电报消息`select`[]自动测试`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`[]DIRECT`.*`[]REJECT
 ;电报服务
 
 ;微软服务
-custom_proxy_group=微软服务`select`[]DIRECT`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
+custom_proxy_group=微软服务`select`[]DIRECT`[]GFW节点`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`[]REJECT
 ;微软服务
 
-;微软服务
-custom_proxy_group=Steam`select`[]DIRECT`[]GFW节点`[]自动选择`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
-;微软服务
+;Steam服务
+custom_proxy_group=Steam`select`[]DIRECT`[]GFW节点`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
+;Steam服务
 
 ;广告拦截
-custom_proxy_group=广告拦截`select`[]REJECT`[]自动选择`[]手动切换`[]DIRECT
+custom_proxy_group=广告拦截`select`[]REJECT`[]手动切换`[]DIRECT
 ;广告拦截
 
 ;自动测试(调用型)
