--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -31,7 +31,7 @@ surge_ruleset=其他连接,[]FINAL
 ;设置分组标志位
 
 ;手动选择(调用型)
-custom_proxy_group=手动切换`select`.*
+custom_proxy_group=手动切换`select`[]自动测试`.*
 ;手动选择(调用型)
 
 ;GFW节点(调用型)
