--- a/myClashProfilePure.ini
+++ b/myClashProfilePure.ini
@@ -35,11 +35,11 @@ custom_proxy_group=手动切换`select`[]自动测试`.*
 ;手动选择(调用型)
 
 ;GFW节点(调用型)
-custom_proxy_group=GFW节点`select`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`.*
+custom_proxy_group=GFW节点`select`[]手动切换`[]自动测试`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`.*
 ;GFW节点(调用型)
 
 ;其他 - 一般是国外连接
-custom_proxy_group=其他连接`select`[]GFW节点`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
+custom_proxy_group=其他连接`select`[]手动切换`[]GFW节点`[]自动测试`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
 ;其他 - 一般是国外连接
 
 ;国外媒体
