--- a/myClashProfilePure - Media定制.ini
+++ b/myClashProfilePure - Media定制.ini
@@ -30,58 +30,58 @@ surge_ruleset=其他连接,[]FINAL
 
 ;设置分组标志位
 
-;手动选择(调用型)
-custom_proxy_group=手动切换`select`[]自动测试`[]负载均衡`[]故障切换`.*
-;手动选择(调用型)
-
-;GFW节点(调用型)
-custom_proxy_group=GFW节点`select`[]手动切换`[]自动测试`[]负载均衡`[]故障切换`[]DIRECT`[]REJECT`.*
-;GFW节点(调用型)
-
-;其他 - 一般是国外连接
-custom_proxy_group=其他连接`select`[]手动切换`[]GFW节点`[]自动测试`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
-;其他 - 一般是国外连接
-
-;国外媒体
-custom_proxy_group=国外媒体`select`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`.*`[]DIRECT`[]REJECT
-;国外媒体
-
-;国内直连
-custom_proxy_group=直连国内`select`[]DIRECT`[]自动测试`[]手动切换`[]GFW节点`.*`[]REJECT
-;国内直连
-
-;电报服务
-custom_proxy_group=电报消息`select`[]自动测试`[]手动切换`[]GFW节点`[]负载均衡`[]故障切换`[]DIRECT`.*`[]REJECT
-;电报服务
-
-;微软服务
-custom_proxy_group=微软服务`select`[]DIRECT`[]GFW节点`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`[]REJECT
-;微软服务
-
-;Steam服务
-custom_proxy_group=Steam`select`[]DIRECT`[]GFW节点`[]自动测试`[]手动切换`[]负载均衡`[]故障切换`.*`[]REJECT
-;Steam服务
-
-;广告拦截
-custom_proxy_group=广告拦截`select`[]REJECT`[]手动切换`[]DIRECT
-;广告拦截
-
-;自动测试(调用型)
-custom_proxy_group=自动测试`url-test`.*`http://www.gstatic.com/generate_204`300
-;自动测试(调用型)
-
-;负载均衡(调用型)
-custom_proxy_group=负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300
-;负载均衡(调用型)
-
-;故障切换(调用型)
-custom_proxy_group=故障切换`fallback`.*`http://www.gstatic.com/generate_204`300
-;故障切换(调用型)
-
 ;个人代理合并
 custom_proxy_group=铂金`select`^((?!ALI).)*$
 custom_proxy_group=阿里巴巴 J`select`(ALI)
 ;个人代理合并
+
+;GFW节点(调用型)
+custom_proxy_group=GFW节点`select`[]铂金`[]阿里巴巴 J`[]自动测试`[]自动测试-阿里`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`[]DIRECT`[]REJECT`^((?!ALI).)*$
+;GFW节点(调用型)
+
+;其他 - 一般是国外连接
+custom_proxy_group=其他连接`select`[]铂金`[]阿里巴巴 J`[]GFW节点`[]自动测试`[]自动测试-阿里`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`[]DIRECT`[]REJECT`^((?!ALI).)*$
+;其他 - 一般是国外连接
+
+;国外媒体
+custom_proxy_group=国外媒体`select`[]铂金`[]阿里巴巴 J`[]GFW节点`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`(ALI)`[]DIRECT`[]REJECT
+;国外媒体
+
+;国内直连
+custom_proxy_group=直连国内`select`[]DIRECT`[]自动测试`[]自动测试-阿里`[]铂金`[]阿里巴巴 J`[]GFW节点`[]REJECT
+;国内直连
+
+;电报服务
+custom_proxy_group=电报消息`select`[]自动测试`[]自动测试-阿里`[]铂金`[]阿里巴巴 J`[]GFW节点`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`[]DIRECT`^((?!ALI).)*$`[]REJECT
+;电报服务
+
+;微软服务
+custom_proxy_group=微软服务`select`[]DIRECT`[]GFW节点`[]自动测试`[]自动测试-阿里`[]铂金`[]阿里巴巴 J`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`[]REJECT
+;微软服务
+
+;Steam服务
+custom_proxy_group=Steam`select`[]DIRECT`[]GFW节点`[]自动测试`[]自动测试-阿里`[]铂金`[]阿里巴巴 J`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`^((?!ALI).)*$`[]REJECT
+;Steam服务
+
+;广告拦截
+custom_proxy_group=广告拦截`select`[]REJECT`[]铂金`[]阿里巴巴 J`[]DIRECT
+;广告拦截
+
+;自动测试(调用型)
+custom_proxy_group=自动测试`url-test`^((?!ALI).)*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=自动测试-阿里`url-test`(ALI)`http://www.gstatic.com/generate_204`300
+;自动测试(调用型)
+
+;负载均衡(调用型)
+custom_proxy_group=负载均衡`load-balance`^((?!ALI).)*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=负载均衡-阿里`load-balance`(ALI)`http://www.gstatic.com/generate_204`300
+;负载均衡(调用型)
+
+;故障切换(调用型)
+custom_proxy_group=故障切换`fallback`^((?!ALI).)*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=故障切换-阿里`fallback`(ALI)`http://www.gstatic.com/generate_204`300
+;故障切换(调用型)
+
 ;地区分组(调用型)
 ; custom_proxy_group=香港节点`url-test`(香港|港|HK)`http://www.gstatic.com/generate_204`300
 ; custom_proxy_group=台湾节点`url-test`(台湾|台|新北|彰化|TW)`http://www.gstatic.com/generate_204`300
