--- a/myClashProfilePure - Media定制.ini
+++ b/myClashProfilePure - Media定制.ini
@@ -31,8 +31,8 @@ surge_ruleset=其他连接,[]FINAL
 ;设置分组标志位
 
 ;个人代理合并
-custom_proxy_group=铂金`select`^((?!ALI).)*$
-custom_proxy_group=阿里巴巴 J`select`(ALI)
+custom_proxy_group=铂金`select`[]自动测试`^((?!ALI).)*$
+custom_proxy_group=阿里巴巴 J`select`[]自动测试-阿里`(ALI)
 ;个人代理合并
 
 ;GFW节点(调用型)
