--- a/myClashProfilePure - Media定制.ini
+++ b/myClashProfilePure - Media定制.ini
@@ -68,7 +68,7 @@ custom_proxy_group=广告拦截`select`[]REJECT`[]铂金`[]阿里巴巴 J`[]DIRE
 ;广告拦截
 
 ;自动测试(调用型)
-custom_proxy_group=自动测试`url-test`^((?!ALI).)*$`http://www.gstatic.com/generate_204`300
+custom_proxy_group=自动测试`url-test`^((?!ALI|IPLC).)*$`http://www.gstatic.com/generate_204`300
 custom_proxy_group=自动测试-阿里`url-test`(ALI)`http://www.gstatic.com/generate_204`300
 ;自动测试(调用型)
 
