更新策略组Pixiv

--- a/myClashProfilePure - Media定制.ini
+++ b/myClashProfilePure - Media定制.ini
@@ -16,6 +16,7 @@ surge_ruleset=电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mas
 surge_ruleset=微软服务,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Microsoft.list
 surge_ruleset=Steam,https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Steam.list
 surge_ruleset=国外媒体,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/GlobalMedia.list
+surge_ruleset=Pixiv,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Pixiv.list
 ;特殊域名对待
 surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 surge_ruleset=直连国内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -63,6 +64,10 @@ custom_proxy_group=微软服务`select`[]DIRECT`[]GFW节点`[]自动测试`[]自
 ;Steam服务
 custom_proxy_group=Steam`select`[]DIRECT`[]GFW节点`[]自动测试`[]自动测试-阿里`[]铂金`[]阿里巴巴 J`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`^((?!ALI).)*$`[]REJECT
 ;Steam服务
+
+;Pixiv服务
+custom_proxy_group=Steam`select`[]铂金`[]GFW节点`[]自动测试`[]自动测试-阿里`[]阿里巴巴 J`[]负载均衡`[]负载均衡-阿里`[]故障切换`[]故障切换-阿里`[]DIRECT`[]REJECT`.*
+;Pixiv服务
 
 ;广告拦截
 custom_proxy_group=广告拦截`select`[]REJECT`[]铂金`[]阿里巴巴 J`[]DIRECT
