Update myClashProfilePure - Media定制.ini

--- a/myClashProfilePure - Media定制.ini
+++ b/myClashProfilePure - Media定制.ini
@@ -34,7 +34,7 @@ surge_ruleset=其他连接,[]FINAL
 
 ;个人代理合并
 custom_proxy_group=铂金`select`[]自动测试`[]阿里巴巴 J`.*
-custom_proxy_group=阿里巴巴 J`select`[]自动测试-阿里`^美国A`^美国B
+custom_proxy_group=阿里巴巴 J`select`[]自动测试-阿里`^(美国A)$`^(美国B)$
 ;个人代理合并
 
 ;GFW节点(调用型)
@@ -74,8 +74,8 @@ custom_proxy_group=广告拦截`select`[]REJECT`[]铂金`[]阿里巴巴 J`[]DIRE
 ;广告拦截
 
 ;自动测试(调用型)
-custom_proxy_group=自动测试`url-test`^((?!美国A|美国B).)*$`http://www.gstatic.com/generate_204`300
-custom_proxy_group=自动测试-阿里`url-test`(美国A|美国B)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=自动测试`url-test`.*`http://www.gstatic.com/generate_204`300
+custom_proxy_group=自动测试-阿里`url-test`^(美国A|美国B)$`http://www.gstatic.com/generate_204`300
 ;自动测试(调用型)
 
 ;负载均衡(调用型)
